[REDO] VmObjectAlloc is not generated by intrinsics methods which allocate objects

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 22
    • Affects Version/s: 18, 19
    • Component/s: hotspot
    • None
    • b10

      While fixing https://bugs.openjdk.java.net/browse/JDK-8265795 I noticed that event is not posted in the intrinsics version for many functions where it is used. Including but not limited to clone(), invoke()m allocateInstance() and allocateUninitializedArray(). There are might be other intensified functions (not analogs JVM_ENTRY versions) that allocate objects without post events.

      Here is the comment from David H.
      "
      I agree that fixing intrinsics should be a separate issue - I have to worry that the overhead of posting events can dwarf the operation itself. I would guess the intrinsic would need a short-cut to check if the event is enabled and if so drop back to non-intrinsic version.
      "

            Assignee:
            Leonid Mesnik
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: