8307462: [REDO] VmObjectAlloc is not generated by intrinsics methods which allocate objects