src/hotspot/share/opto/library_call.cpp
@@ -50,6 +50,7 @@
 #include "opto/runtime.hpp"
 #include "opto/rootnode.hpp"
 #include "opto/subnode.hpp"
+#include "prims/jvmtiExport.hpp"
 #include "prims/jvmtiThreadState.hpp"
 #include "prims/unsafe.hpp"
 #include "runtime/jniHandles.inline.hpp"
@@ -2833,6 +2834,23 @@ bool LibraryCallKit::inline_unsafe_allocate() {
     test = _gvn.transform(new SubINode(inst, bits));
     // The 'test' is non-zero if we need to take a slow path.
   }
+
+#if INCLUDE_JVMTI
+  {
+    Node* addr = makecon(TypeRawPtr::make((address) &JvmtiExport::_should_notify_object_alloc));
+    Node* should_post_vm_object_alloc = make_load(this->control(), addr,  TypeInt::INT, T_INT, MemNode::unordered);
+    Node* chk = _gvn.transform( new CmpINode(should_post_vm_object_alloc, intcon(0)));
+    Node* tst = _gvn.transform( new BoolNode(chk, BoolTest::eq));
+    {
+      BuildCutout unless(this, tst, PROB_MAX);
+      uncommon_trap(Deoptimization::Reason_intrinsic,
+                    Deoptimization::Action_make_not_entrant);
+    }
+    if (stopped())
+      return true;
+
+  }
+#endif //INCLUDE_JVMTI
 
   Node* obj = new_instance(kls, test);
   set_result(obj);
